--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,11 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <!-- Google fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
